[project]
name = "nolima"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-aiplatform==1.74.0",
    "google-genai==0.3.0",
    "httpx<0.28",
    "jsonargparse==4.34.0",
    "langchain-aws==0.2.9",
    "langchain-core==0.3.26",
    "openai",
    "tenacity==9.0.0",
    "tiktoken",
    "transformers==4.46.1",
    "vllm>=0.5.0.post1,<=0.11.0",
]
